--- a/src/app/index.html
+++ b/src/app/index.html
@@ -8,70 +8,16 @@
 </head>
 <body>
 
+    <input id="exclude" placeholder="Exlude">
     <div class="container">
-        <div class="combo">
+        <!-- <div class="combo">
             <img src="/img/abilities/dash.png" class="ability">
             <img src="/img/abilities/blink gun.png" class="ability">
             <img src="/img/abilities/beam.png" class="ability">
-        </div>
-        <div class="combo">
-            <img src="/img/abilities/dash.png" class="ability">
-            <img src="/img/abilities/blink gun.png" class="ability">
-            <img src="/img/abilities/beam.png" class="ability">
-        </div>
-        <div class="combo">
-            <img src="/img/abilities/dash.png" class="ability">
-            <img src="/img/abilities/blink gun.png" class="ability">
-            <img src="/img/abilities/beam.png" class="ability">
-        </div>
-        <div class="combo">
-            <img src="/img/abilities/dash.png" class="ability">
-            <img src="/img/abilities/blink gun.png" class="ability">
-            <img src="/img/abilities/beam.png" class="ability">
-        </div>
-        <div class="combo">
-            <img src="/img/abilities/dash.png" class="ability">
-            <img src="/img/abilities/blink gun.png" class="ability">
-            <img src="/img/abilities/beam.png" class="ability">
-        </div>
-        <div class="combo">
-            <img src="/img/abilities/dash.png" class="ability">
-            <img src="/img/abilities/blink gun.png" class="ability">
-            <img src="/img/abilities/beam.png" class="ability">
-        </div>
-        <div class="combo">
-            <img src="/img/abilities/dash.png" class="ability">
-            <img src="/img/abilities/blink gun.png" class="ability">
-            <img src="/img/abilities/beam.png" class="ability">
-        </div>
-        <div class="combo">
-            <img src="/img/abilities/dash.png" class="ability">
-            <img src="/img/abilities/blink gun.png" class="ability">
-            <img src="/img/abilities/beam.png" class="ability">
-        </div>
-        <div class="combo">
-            <img src="/img/abilities/dash.png" class="ability">
-            <img src="/img/abilities/blink gun.png" class="ability">
-            <img src="/img/abilities/beam.png" class="ability">
-        </div>
-        <div class="combo">
-            <img src="/img/abilities/dash.png" class="ability">
-            <img src="/img/abilities/blink gun.png" class="ability">
-            <img src="/img/abilities/beam.png" class="ability">
-        </div>
-        <div class="combo">
-            <img src="/img/abilities/dash.png" class="ability">
-            <img src="/img/abilities/blink gun.png" class="ability">
-            <img src="/img/abilities/beam.png" class="ability">
-        </div>
-        <div class="combo">
-            <img src="/img/abilities/dash.png" class="ability">
-            <img src="/img/abilities/blink gun.png" class="ability">
-            <img src="/img/abilities/beam.png" class="ability">
-        </div>
+            <span class="score">Score: 200</span>
+        </div> -->
+        %combos%
     </div>
-
-
 
     <script src="restart.js"></script>
 </body>
