time for a lot of fine tuning

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-    <input id="exclude" placeholder="Exlude">
+    <!-- <input id="exclude" placeholder="Exlude"> -->
+    <script src="script.js"></script>
+    <script src="restart.js"></script>
     <div class="container">
         <!-- <div class="combo">
             <img src="/img/abilities/dash.png" class="ability">
@@ -19,7 +21,6 @@
         %combos%
     </div>
 
-    <script src="script.js"></script>
-    <script src="restart.js"></script>
+
 </body>
 </html>
