--- a/src/app/index.html
+++ b/src/app/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <!-- <input id="exclude" placeholder="Exlude"> -->
-    <script src="script.js"></script>
-    <script src="restart.js"></script>
+    <h3 id="visibleCount">Loading...</h3>
+    <div class="marginAutoBlock">
+        <input id="exclude" placeholder="Exlude (comma seperated)">
+        <input id="search" placeholder="Search (comma seperated)">
+    </div>
     <div class="container">
         <!-- <div class="combo">
             <img src="/img/abilities/dash.png" class="ability">
@@ -21,6 +22,7 @@
         %combos%
     </div>
 
-
+    <script src="script.js"></script>
+    <script src="restart.js"></script>
 </body>
 </html>
